# apps-app

./: .gitignore  docker-compose.yml
backend/: .env.test  Dockerfile  Makefile  celery.Dockerfile  entrypoint.sh  manuel_setup.py  manuel_teardown.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: aabbddec00b1_add_tables.py
backend/src/: __init__.py  main.py  tasks.py
backend/src/api/: __init__.py  dependecies.py
backend/src/api/cron/: __init__.py  asset.py  campaign_creative.py  insight.py
backend/src/api/router/: __init__.py  asset.py  campaign.py  campaign_creative.py  insight.py
backend/src/core/: __init__.py  config.py  exceptions.py
backend/src/database/: __init__.py  base_session.py  session.py
backend/src/domain/: __init__.py
backend/src/domain/api_call/: __init__.py  api_call.py  asset.py  base.py  campaign.py  campaign_creative.py  http_requests.py  insight.py
backend/src/domain/http/: __init__.py  base.py  http_requests.py
backend/src/middleware/: __init__.py  error_handler.py
backend/src/model/: __init__.py  asset.py  campaign_creative.py  insight.py  mixin.py
backend/src/schema/: __init__.py  asset.py  campaign.py  campaign_creative.py  insight.py
backend/src/service/: __init__.py  asset.py  asset_status_checker.py  campaign.py  campaign_creative.py  campaign_creative_status_checker.py  insight.py  insight_check.py  service.py
backend/test/e2e/: __init__.py
backend/test/setup/: __init__.py
backend/test/setup/domain/: __init__.py
backend/test/setup/service/: __init__.py  dummy_create_data.py  (+1 more)
(+18 files in other folders)
