[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["cgtyunerr <110602817+cgtyunerr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
requests = "^2.32.3"
celery = {extras = ["redis"], version = "^5.4.0"}
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
python-multipart = "^0.0.17"
orjson = "^3.10.11"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
